# swc-plugin-nullstack

./: .gitignore  .npmignore  Cargo.toml  README.md  debug.txt  package-lock.json  package.json
src/: lib.rs
src/loaders/: helpers.rs  inject_accept_to_module.rs  inject_hash_to_class.rs  inject_inner_components_to_class.rs  inject_nullstack_to_modules.rs  inject_restart_to_module.rs  inject_runtime_to_module.rs  inject_source_to_events.rs  inject_transpiler_to_module.rs  mod.rs  register_server_functions_on_server.rs  remove_styles_on_server.rs  remove_unused_from_client.rs  replace_lazy_on_module.rs  replace_ref_on_attributes.rs  replace_server_functions_on_client.rs
src/tests/: inject_accept_to_module.rs  inject_hash_to_class.rs  inject_inner_components_to_class.rs  inject_restart_to_module.rs  inject_runtime_to_module.rs  inject_source_to_events.rs  inject_transpiler_to_module.rs  mod.rs  register_server_functions_on_server.rs  remove_styles_on_server.rs  remove_unused_from_client.rs  replace_lazy_on_module.rs  replace_ref_on_attributes.rs  replace_server_functions_on_client.rs
