[package]
name = "nullstack"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde_json = "1.0.79"
swc_common = {version = "0.29.29", features = ["concurrent"]}
swc_core = {version = "0.59.14", features = [
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "common",
]}
swc_ecma_parser = "0.124.9"
swc_ecma_quote = "0.40.10"
tracing = {version = "0.1.37", features = ["release_max_level_off"]}
