[package]
name = "swc-plugin-nullstack"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
md5 = "0.7.0"
serde = "1.0.152"
serde_json = "1.0.79"
swc_common = {version = "0.29.29", features = ["concurrent"]}
swc_core = {version = "0.59.14", features = [
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "common",
]}
swc_ecma_parser = "0.124.9"
tracing = { version = "0.1.37", features = ["release_max_level_off"] }
